# goto

./: .gitignore  Makefile  README-es.md  README-ja.md  README-ko.md  README-zh.md  README.md  RELEASE_NOTES.md  go.mod  go.sum  goto
.github/: copilot-instructions.md
completion/: _goto  goto-completion.bash
go/: README.md  config.go  config_io.go  go.mod  go.sum  goto  goto.go  goto_config.go  goto_config_default.go  goto_history.go  goto_print.go  goto_version.go  locale.go  utils.go
test_multibyte/: test_multibyte.go
tests/: README.md  README_Python.md  __init__.py  conftest.py  debug_history.py  debug_simple_history.py  functional_test.sh  goto_helper.py  performance_test.sh  pyproject.toml  run_tests.py  run_tests.sh  test  test.sh  test_advanced.py  test_all.sh  test_basic.py  test_complete_flow.py  test_debug.sh  test_history.py  test_history_manual.py  test_history_manual_fixed.py  test_history_ordering.py  test_history_sorting.py  test_history_sorting_comprehensive.py  test_interactive_history_sorting.py  test_interactive_mode.py  test_mixed_history_sorting.py  test_no_history_sorting.py  test_utils.py
